# bnf-plus-plus

./: CMakeLists.txt
src/: bnf++gen.cc  bnf++parser.cc
